Removes style.css and created different style for game and menu , created a new rocket and implemented an username system , you can choose a username in menu page then input it will be stored in localstorage username variable

--- a/todo.txt
+++ b/todo.txt
@@ -10,10 +10,6 @@ sa apara coins ( mai rar ) daca le spargi sa iti dea un revives
 
 
 
-
-
-
-
 -----------------------------
-poti sa tragi si cu click
-daca tragi cu space tragi perpendicular , daca tragi cu click tragi in locul unde este mouseul
+built another rocket
+username
