Added back button for game to return to main menu , but I have to work at style

--- a/todo.txt
+++ b/todo.txt
@@ -7,8 +7,8 @@ loose unse a revive
 a better rochet
 mai putini asteroizi de o data 
 sa apara coins ( mai rar ) daca le spargi sa iti dea un revives
-
-
+turbo shoot 
+do not move shoot unstopable bug
 
 -----------------------------
 built another rocket
